--- a/waven.html
+++ b/waven.html
@@ -6,43 +6,45 @@
 		</title>
 	</head>
 	<body>
-		<h1>Classes</h1>
-			<table class="classes">
-				<tr>
-					<th>Iop</th>
-					<th>a</th>
-					<th>b</th>
-					<th>c</th>
-					<th>d</th>
-				</tr>
-				<tr>
-					<th>Eniripsa</th>
-					<th>a</th>
-					<th>b</th>
-					<th>c</th>
-					<th>d</th>
-				</tr>
-				<tr>
-					<th>Xelor</th>
-					<th>a</th>
-					<th>b</th>
-					<th>c</th>
-					<th>d</th>
-				</tr>
-				<tr>
-					<th>Sram</th>
-					<th>a</th>
-					<th>b</th>
-					<th>c</th>
-					<th>d</th>
-				</tr>
-				<tr>
-					<th>Cra</th>
-					<th>a</th>
-					<th>b</th>
-					<th>c</th>
-					<th>d</th>
-				</tr>
-			</table>
+		<div class="classes-div">
+			<h1 class="classes-title">Classes</h1>
+				<table class="classes">
+					<tr>
+						<th>Iop</th>
+						<th>a</th>
+						<th>b</th>
+						<th>c</th>
+						<th>d</th>
+					</tr>
+					<tr>
+						<th>Eniripsa</th>
+						<th>a</th>
+						<th>b</th>
+						<th>c</th>
+						<th>d</th>
+					</tr>
+					<tr>
+						<th>Xelor</th>
+						<th>a</th>
+						<th>b</th>
+						<th>c</th>
+						<th>d</th>
+					</tr>
+					<tr>
+						<th>Sram</th>
+						<th>a</th>
+						<th>b</th>
+						<th>c</th>
+						<th>d</th>
+					</tr>
+					<tr>
+						<th>Cra</th>
+						<th>a</th>
+						<th>b</th>
+						<th>c</th>
+						<th>d</th>
+					</tr>
+				</table>
+		</div>
 	</body>
 </html>
