--- a/waven.html
+++ b/waven.html
@@ -7,44 +7,55 @@
 	</head>
 	<body>
 		<div class="classes-div">
-			<h1 class="classes-title">Classes</h1>
+			<h1 class="classes-title">1. Classes</h1>
 				<table class="classes">
 					<tr>
 						<th>Iop</th>
-						<th>a</th>
-						<th>b</th>
-						<th>c</th>
-						<th>d</th>
+						<th><a href="#">Bouvaloir Orok</a></th>
+						<th><a href="#">Justelame Brutale</a></th>
+						<th><a href="#">Flamboyante Kasai</a></th>
+						<th><a href="#">Glaive Stalaktoss</a></th>
+						<th><a href="#">Lamarguedon Spectral</a></th>
 					</tr>
 					<tr>
 						<th>Eniripsa</th>
-						<th>a</th>
-						<th>b</th>
-						<th>c</th>
-						<th>d</th>
+						<th><a href="#">Pinceau Kokoro</a></th>
+						<th><a href="#">Scalpel De L'Apostrukeur</a></th>
+						<th><a href="#">Gemme Déphasante</a></th>
+						<th><a href="#">Lame Voracius</a></th>
+						<th><a href="#">Ambre Tamashi</a></th>
 					</tr>
 					<tr>
 						<th>Xelor</th>
-						<th>a</th>
-						<th>b</th>
-						<th>c</th>
-						<th>d</th>
+						<th><a href="#">Aiguille Pikuxala</a></th>
+						<th><a href="#">Regulant Gurpapa</a></th>
+						<th><a href="#">Sabliaton Jikan</a></th>
+						<th><a href="#">Synchronisateur Tako</a></th>
+						<th><a href="#">Catalysateur Pramium</a></th>
 					</tr>
 					<tr>
 						<th>Sram</th>
-						<th>a</th>
-						<th>b</th>
-						<th>c</th>
-						<th>d</th>
+						<th><a href="#">Ecorcheur Shugen</a></th>
+						<th><a href="#">Ken Kartana</a></th>
+						<th><a href="#">Cisaille Orishi</a></th>
+						<th><a href="#">Lame Ourai</a></th>
+						<th><a href="#">Surin Sourokan</a></th>
 					</tr>
 					<tr>
 						<th>Cra</th>
-						<th>a</th>
-						<th>b</th>
-						<th>c</th>
-						<th>d</th>
+						<th><a href="#">Arc Piven</a></th>
+						<th><a href="#">Expingole</a></th>
+						<th><a href="#">Bunelame</a></th>
+						<th><a href="#">Shiru Shade</a>n</th>
+						<th><a href="#">Voldorak Vo</a></th>
 					</tr>
 				</table>
+			<h2>1.1. Iop</h2>
+			<h3>1.1.1. Bouvaloir Orok</h2>
+			<h3>1.1.2. Justelame Brutale</h2>
+			<h3>1.1.3. Flamboyante Kasai</h2>
+			<h3>1.1.4. Glaive Stalaktoss</h2>
+			<h3>1.1.5. Lamarguedon Spectral</h2>
 		</div>
 	</body>
 </html>
