--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			<ul>
 				<li><a href="waven.html">Waven</a></li>
 				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
+				<li><a href="progress.html">Avancement du site</li>
 			</ul>
 		</nav>
 		<div>
