--- a/waven.html
+++ b/waven.html
@@ -46,16 +46,79 @@
 						<th><a href="#">Arc Piven</a></th>
 						<th><a href="#">Expingole</a></th>
 						<th><a href="#">Bunelame</a></th>
-						<th><a href="#">Shiru Shade</a>n</th>
+						<th><a href="#">Shiru Shaden</a></th>
 						<th><a href="#">Voldorak Vo</a></th>
 					</tr>
+					<tr>
+						<th>Sacrieur</th>
+					</tr>
 				</table>
-			<h2>1.1. Iop</h2>
-			<h3>1.1.1. Bouvaloir Orok</h2>
-			<h3>1.1.2. Justelame Brutale</h2>
-			<h3>1.1.3. Flamboyante Kasai</h2>
-			<h3>1.1.4. Glaive Stalaktoss</h2>
-			<h3>1.1.5. Lamarguedon Spectral</h2>
+			<div class="iop">
+				<h2>1.1. Iop</h2>			
+				
+				<div class="iop_spells">
+					<h3>Sorts communs</h2>
+				</div>
+				
+				<div class="boulorok">
+					<h3>1.1.1. Bouvaloir Orok</h3>
+					<div class="property">
+						<p class="property-title">Caractéristiques :<p>
+						<ul>
+							<li>Points de vie : 401</li>
+							<li>Attaque : 30</li>
+							<li>Chance critique : 5%</li>
+							<li>Points de mouvement: 3</li>
+						</ul>
+					</div>
+				</div>
+				<hr>
+				<div class="lamebrut">
+					<h3>1.1.2. Justelame Brutale</h3>
+					<div class="property">
+						<p class="property-title">Caractéristiques :<p>
+						<ul>
+							<li>Points de vie : 387</li>
+							<li>Attaque : 32</li>
+							<li>Chance critique : 5%</li>
+							<li>Points de mouvement: 3</li>
+						</ul>
+					</div>
+				</div>
+				<hr>
+				<h3>1.1.3. Flamboyante Kasai</h3>
+				<div class="property">
+						<p class="property-title">Caractéristiques :<p>
+						<ul>
+							<li>Points de vie : 399</li>
+							<li>Attaque : 32</li>
+							<li>Chance critique : 5%</li>
+							<li>Points de mouvement: 3</li>
+						</ul>
+					</div>
+				<hr>
+				<h3>1.1.4. Glaive Stalaktoss</h3>
+				<div class="property">
+						<p class="property-title">Caractéristiques :<p>
+						<ul>
+							<li>Points de vie : 401</li>
+							<li>Attaque : 32</li>
+							<li>Chance critique : 5%</li>
+							<li>Points de mouvement: 3</li>
+						</ul>
+					</div>
+				<hr>
+				<h3>1.1.5. Lamarguedon Spectral</h3>
+				<div class="property">
+						<p class="property-title">Caractéristiques :<p>
+						<ul>
+							<li>Points de vie : 396</li>
+							<li>Attaque : 26</li>
+							<li>Chance critique : 5%</li>
+							<li>Points de mouvement: 3</li>
+						</ul>
+					</div>
+			</div>
 		</div>
 	</body>
 </html>
