ajout pour l'index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<script src="https://sdk.scdn.co/spotify-player.js"></script>
 		<link href="style.css" rel="stylesheet">
 		<title>
 			Le fun à son paroxysme !
@@ -14,6 +15,7 @@
 			</ul>
 		</nav>
 		<div>
+			<script src
 		</div>
 	</body>
 </html>
