--- a/waven.html
+++ b/waven.html
@@ -62,6 +62,9 @@
 				
 				<div class="boulorok">
 					<h3>1.1.1. Bouvaloir Orok</h3>
+					<img src="https://pbs.twimg.com/media/FkwOc13WQAAhO0o.jpg" alt="Boulavoir Orok" height="220px";>
+					<p class="pastouts">Passif : <p>
+					<p class="pastouts">Atouts : <p>
 					<div class="property">
 						<p class="property-title">Caractéristiques :<p>
 						<ul>
@@ -75,6 +78,8 @@
 				<hr>
 				<div class="lamebrut">
 					<h3>1.1.2. Justelame Brutale</h3>
+					<p class="pastouts">Passif : <p>
+					<p class="pastouts">Atouts : <p>
 					<div class="property">
 						<p class="property-title">Caractéristiques :<p>
 						<ul>
@@ -86,8 +91,11 @@
 					</div>
 				</div>
 				<hr>
-				<h3>1.1.3. Flamboyante Kasai</h3>
-				<div class="property">
+				<div> 
+					<h3>1.1.3. Flamboyante Kasai</h3>
+					<p class="pastouts">Passif : <p>
+					<p class="pastouts">Atouts : <p>
+					<div class="property">
 						<p class="property-title">Caractéristiques :<p>
 						<ul>
 							<li>Points de vie : 399</li>
@@ -96,9 +104,13 @@
 							<li>Points de mouvement: 3</li>
 						</ul>
 					</div>
+				</div>
 				<hr>
-				<h3>1.1.4. Glaive Stalaktoss</h3>
-				<div class="property">
+				<div>
+					<h3>1.1.4. Glaive Stalaktoss</h3>
+					<p class="pastouts">Passif : <p>
+					<p class="pastouts">Atouts : <p>
+					<div class="property">
 						<p class="property-title">Caractéristiques :<p>
 						<ul>
 							<li>Points de vie : 401</li>
@@ -107,9 +119,13 @@
 							<li>Points de mouvement: 3</li>
 						</ul>
 					</div>
+				</div>
 				<hr>
-				<h3>1.1.5. Lamarguedon Spectral</h3>
-				<div class="property">
+				<div>
+					<h3>1.1.5. Lamarguedon Spectral</h3>
+					<p class="pastouts">Passif : <p>
+					<p class="pastouts">Atouts : <p>
+					<div class="property">
 						<p class="property-title">Caractéristiques :<p>
 						<ul>
 							<li>Points de vie : 396</li>
@@ -118,6 +134,7 @@
 							<li>Points de mouvement: 3</li>
 						</ul>
 					</div>
+				</div>
 			</div>
 		</div>
 	</body>
