--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 	<head>
-		<script src="https://sdk.scdn.co/spotify-player.js"></script>
 		<link href="style.css" rel="stylesheet">
 		<title>
 			Le fun à son paroxysme !
@@ -8,6 +7,12 @@
 	</head>
 	<body>
 		<nav>
+			<h1>Projets</h1>
+			<ul>
+				<li><a href="#">Puzzle Game</a></li>
+				<li><a href="#">Tournoi</a></li>
+			</ul>
+			<h1>Divers</h1>
 			<ul>
 				<li><a href="waven.html">Waven</a></li>
 				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
@@ -15,7 +20,6 @@
 			</ul>
 		</nav>
 		<div>
-			<script src
 		</div>
 	</body>
 </html>
