--- a/progress.html
+++ b/progress.html
@@ -8,5 +8,7 @@
 	<body>
 		<p>Adieu Singed !</p>
 		<img src="progress-pictures/singed-font.png" alt="Tapissage de Singed" width="500px">
+		<p>Index du 24/06/2023</p>
+		<img src="progress-pictures/index_du_passé.png" alt="Menu de l'index" width="500px">
 	</body>
 </html>
