--- a/waven.html
+++ b/waven.html
@@ -6,6 +6,7 @@
 		</title>
 	</head>
 	<body>
+		<h1>Waven</h1>
 		<div class="classes-div">
 			<h1 class="classes-title">1. Classes</h1>
 				<table class="classes">
