--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<h1>Projets</h1>
 			<ul>
 				<li><a href="#">Puzzle Game</a></li>
-				<li><a href="#">Tournoi</a></li>
+				<li><a href="agenda.html">Agenda</a></li>
 			</ul>
 			<h1>Divers</h1>
 			<ul>
