--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 		<nav>
 			<h1>Projets</h1>
 			<ul>
-				<li><a href="#">Puzzle Game</a></li>
 				<li><a href="agenda.html">Agenda</a></li>
+				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
 			</ul>
 			<h1>Divers</h1>
 			<ul>
 				<li><a href="waven.html">Waven</a></li>
-				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
 				<li><a href="progress.html">Avancement du site</li>
-			</ul>
+				<li><a href="sign-up.html">Inscription</li>
+				</ul>
 		</nav>
 		<div>
 		</div>
