--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 			</ul>
 			<h1>Divers</h1>
 			<ul>
+				<ly><a href="dynamo.html">Electricite</a></li>
 				<li><a href="waven.html">Waven</a></li>
 				<li><a href="progress.html">Avancement du site</li>
 				<li><a href="sign-up.html">Inscription</li>
-				</ul>
+			</ul>
 		</nav>
 		<div>
 		</div>
