--- a/electricite.html
+++ b/electricite.html
@@ -7,10 +7,15 @@
 	</head>
 	<body>
 		<h1>L'electricité</h1>
-		<h2>CECI EST UN MEMO ET PEUT TRES BIEN CONTENIR DES FAUTES</h2>
+		<h2>CECI EST UN MEMO !!!!</h2>
+		<hr width=500px>
 		<p>La charge d'un électron est égale à : e = -1,6.10**19 C elle a donc la même valeur absolue que la charge du proton, la différence est que lui est chargé positivement : e = 1,6 10**19 C</p>
+		<hr width=500px>
 		<p>Quantité de charge exprimée en Coulomb(q) on peut donc calculer q = Nombre d'electrons * valeur la absolue de e</p>
+		<hr width=500px>
 		<p>On peut aussi calculer l'intensité du courant par i = dq/dt -> t(s) alors q en Coulomb, t(h) alors q en Ampère heure). Mais pourquoi on change d'unité ?
 		Car le Coulomb est l'unité qui désigne la quantité de charge transféré dans un ampère en 1 seconde, l'ampère est l'intensisté du courant électrique. Tout est dit, on pourrait très bien utilisé 3600 C pour désigner un Ah (On peut dire que C = As mais théoriquement c'est incorrect je pense)</p>
+		<hr width=500px>
+		<p>Potentiel électrique ?</p>
 	</body>
 </html>
