--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</ul>
 			<h1>Divers</h1>
 			<ul>
-				<ly><a href="dynamo.html">Electricite</a></li>
+				<li><a href="electricite.html">Electricite</a></li>
 				<li><a href="waven.html">Waven</a></li>
 				<li><a href="progress.html">Avancement du site</li>
 				<li><a href="sign-up.html">Inscription</li>
