--- a/electricite.html
+++ b/electricite.html
@@ -16,6 +16,7 @@
 		<p>On peut aussi calculer l'intensité du courant par i = dq/dt -> t(s) alors q en Coulomb, t(h) alors q en Ampère heure). Mais pourquoi on change d'unité ?
 		Car le Coulomb est l'unité qui désigne la quantité de charge transféré dans un ampère en 1 seconde, l'ampère est l'intensisté du courant électrique. Tout est dit, on pourrait très bien utilisé 3600 C pour désigner un Ah (On peut dire que C = As mais théoriquement c'est incorrect je pense)</p>
 		<hr width=500px>
-		<p>Potentiel électrique ?</p>
-	</body>
+		<p>Le potentiel électrique en un point d'un champ électrique correspond au travail à fournir pour transporter une charge positive unitaire depuis l'infini jusqu'à ce point. Champ électrique ? Le champ électrique (champ vectoriel) est une zone d'influence qui s'étend tout autour d'une charge électrique. Donc dans un champs électrique, la différence de potentiel électrique est le travail fournit pour déplacer une charge électrique d'un point à un autre dans le champs électrique exprimé en volt.
+		Le dipôle d'un circuit électrique présente donc une différence de potentiel et pour la calculer : Tension = Energie/Intensité</p>
+
 </html>
