--- a/electricite.html
+++ b/electricite.html
@@ -7,16 +7,16 @@
 	</head>
 	<body>
 		<h1>L'electricité</h1>
-		<h2>CECI EST UN MEMO !!!!</h2>
-		<hr width=500px>
+		<h2 style="color:red;text-decoration: none ;">CECI EST UN MEMO ET N'EST EN AUCUN CAS FAIT POUR APPRENDRE !!!!</h2>
 		<p>La charge d'un électron est égale à : e = -1,6.10**19 C elle a donc la même valeur absolue que la charge du proton, la différence est que lui est chargé positivement : e = 1,6 10**19 C</p>
-		<hr width=500px>
 		<p>Quantité de charge exprimée en Coulomb(q) on peut donc calculer q = Nombre d'electrons * la valeur absolue de e</p>
-		<hr width=500px>
 		<p>On peut aussi calculer l'intensité du courant par i = dq/dt -> t(s) alors q en Coulomb, t(h) alors q en Ampère heure). Mais pourquoi on change d'unité ?
 		Car le Coulomb est l'unité qui désigne la quantité de charge transféré dans un ampère en 1 seconde, l'ampère est l'intensisté du courant électrique. Tout est dit, on pourrait très bien utilisé 3600 C pour désigner un Ah (On peut dire que C = As mais théoriquement c'est incorrect je pense)</p>
-		<hr width=500px>
 		<p>Le potentiel électrique en un point d'un champ électrique correspond au travail à fournir pour transporter une charge positive unitaire depuis l'infini jusqu'à ce point. Champ électrique ? Le champ électrique (champ vectoriel) est une zone d'influence qui s'étend tout autour d'une charge électrique. Donc dans un champs électrique, la différence de potentiel électrique est le travail fournit pour déplacer une charge électrique d'un point à un autre dans le champs électrique exprimé en volt.
 		Le dipôle d'un circuit électrique présente donc une différence de potentiel et pour la calculer : Tension = Energie/Intensité</p>
-
+		<hr width=500px>
+		<p>Le dipôle recepteur passif transforme la totalité de l'énergie absorbée en énergie thermique, tout récepteur présente soit une bonne conductance soit une bonne résistance. La loi d'ohm est la formule qui permet de calculer la relation entre la résistance, la tension et l'intensité ce qui nous donne cette formule U = R.I 
+		Elle nous permet donc de calculer la résistance dans un circuit. On peut calculer l'énergie dissipé pendant un temps t via la loi de joule : W = U.I.t = R.I**2.t</p>
+		<p>Dans un circuit on peut diviser le courant, par exemple avec une association en parallèle : On ajoute des résistances à des chemins dfférents, l'intensité du courant que l'on retrouvera dans chacuns de ses chemins de ne sera qu'une partie de l'intensité réelle -> I = I1 + I2 + ... = U/R1 = U/R2 => U = I(1/R1+1/R2+...) = I.Req
+		Donc pour obtenir la résistance total dans ce type de circuit je dois utilisé la formule des inverse car plus on ajoute de résistance en parallèle plus la résitance total diminue. A l'instar de l'association en série où les résisances sont diposées les unes à la suite des autres ce qui a pour conséquence de faire passer l'entièreté du courant par toutes les résistances : Pour calculer la résistance total on additionne tout simplement les résistances.</p>
 </html>
