--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 	</head>
 	<body>
 		<nav>
-			<h1>Projets</h1>
+			<h1>Title</h1>
 			<ul>
 				<li><a href="agenda.html">Agenda</a></li>
+				<li><a href="info_project.html">Mon Projet</a></li>
 				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
-			</ul>
-			<h1>Divers</h1>
-			<ul>
 				<li><a href="electricite.html">Electricite</a></li>
 				<li><a href="waven.html">Waven</a></li>
 				<li><a href="progress.html">Avancement du site</li>
