--- a/index.html
+++ b/index.html
@@ -7,15 +7,24 @@
 	</head>
 	<body>
 		<nav>
-			<h1>Title</h1>
+			<h1>Divers</h1>
 			<ul>
 				<li><a href="agenda.html">Agenda</a></li>
-				<li><a href="info_project.html">Mon Projet</a></li>
 				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
-				<li><a href="electricite.html">Electricite</a></li>
 				<li><a href="waven.html">Waven</a></li>
 				<li><a href="progress.html">Avancement du site</li>
 				<li><a href="sign-up.html">Inscription</li>
+			</ul>
+			<h1>Informatique</h1>
+			<ul
+				<h2>Générateur électrique manuel</h2>
+				<li><a href="dynamo_project.html">Le projet</a></li>
+				<li><a href="electricite.html">Electricite</a></li>
+				<li><a href="lesressorts.html">Les ressorts</a></li>
+				<h2>Square Jumper 2</h2>
+				<li><a href="game_project.html">Le projet</a></li>
+				<li><a href="electricite.html">Programmation</a></li>
+				<li><a href="lesressorts.html">Graphismes</a></li>
 			</ul>
 		</nav>
 		<div>
