--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<li><a href="sign-up.html">Inscription</li>
 			</ul>
 			<h1>Informatique</h1>
-			<ul
+			<ul>
 				<h2>Générateur électrique manuel</h2>
 				<li><a href="dynamo_project.html">Le projet</a></li>
-				<li><a href="electricite.html">Electricite</a></li>
+				<li><a href="electricite.html">L'´Électricité</a></li>
 				<li><a href="lesressorts.html">Les ressorts</a></li>
 				<h2>Square Jumper 2</h2>
 				<li><a href="game_project.html">Le projet</a></li>
