--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 				<li><a href="agenda.html">Agenda</a></li>
 				<li><a href="https://www.youtube.com/watch?v=BBJa32lCaaY&ab_channel=LegacyPNDA">Gestionnaire de mot de passe</a></li>
 				<li><a href="waven.html">Waven</a></li>
-				<li><a href="progress.html">Avancement du site</li>
-				<li><a href="sign-up.html">Inscription</li>
+				<li><a href="progress.html">Avancement du site</a></li>
+				<li><a href="sign-up.html">Inscription</a></li>
 			</ul>
 			<h1>Informatique</h1>
 			<ul>
